--- a/src/web/index.html
+++ b/src/web/index.html
@@ -36,13 +36,13 @@
     <h2>Acesso aos perifericos</h2>
     <ul>
         <li id='device_cam'>Captura imagem</li>
-        <li id='device_barcode'>Código de barras</li>
+        <li id='device_barcode'>C&oacute;digo de barras</li>
         <li id='device_bt_paired'>Pareados</li>
-        <li id='device_geolocation'>Geo Posição</li>
-        <li id='device_orientation_lock'>Libera Orientação</li>
-        <li id='device_orientation_unlock'>Trava Orientação</li>
-        <li id='device_notify'>Notificação</li>
-        <li id='device_vibrate'>Vibração</li>
+        <li id='device_geolocation'>Geo Posi&ccedil;&atilde;o</li>
+        <li id='device_orientation_lock'>Libera Orienta&ccedil;&atilde;o</li>
+        <li id='device_orientation_unlock'>Trava Orienta&ccedil;&atilde;o</li>
+        <li id='device_notify'>Notifica&ccedil;&atilde;o</li>
+        <li id='device_vibrate'>Vibra&ccedil;&atilde;o</li>
     </ul>
 
     <h2>Testa os perifericos</h2>
@@ -55,7 +55,7 @@
         <li id='test_3g_conn'>Conectado 3G</li>
     </ul>
 
-    <h2>Abre as configurações</h2>
+    <h2>Abre as configura&ccedil;&otilde;es</h2>
     <ul>
         <li id='config_bluetooth'>Abre BlueTooth</li>
         <li id='config_nfc'>Abre NFC</li>
@@ -73,12 +73,12 @@
         <li id='db_commit'>Processo c/ Commit</li>
     </ul>
 
-    <h2>Miscelânea</h2>
+    <h2>Miscel&acirc;nea</h2>
     <ul>       
         <li id='misc_advpl'>runAdvpl</li>
         <li id='misc_message'>Troca de mensagens</li>
 		<li id='misc_ajax'>Testar Ajax</li>
-        <li id='misc_version'>Versão da Lib JS</li>
+        <li id='misc_version'>Vers&atilde;o da Lib JS</li>
     </ul>
 
 	<!-- build:js scripts/vendor.js -->
