Adicionado bootstrap e jquery

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -33,53 +33,55 @@
         <span>Cloud Bridge</span>
     </h1>
 
-    <h2>Acesso aos perifericos</h2>
-    <ul>
-        <li id='device_cam'>Captura imagem</li>
-        <li id='device_barcode'>C&oacute;digo de barras</li>
-        <li id='device_bt_paired'>Pareados</li>
-        <li id='device_geolocation'>Geo Posi&ccedil;&atilde;o</li>
-        <li id='device_orientation_lock'>Libera Orienta&ccedil;&atilde;o</li>
-        <li id='device_orientation_unlock'>Trava Orienta&ccedil;&atilde;o</li>
-        <li id='device_notify'>Notifica&ccedil;&atilde;o</li>
-        <li id='device_vibrate'>Vibra&ccedil;&atilde;o</li>
+	<div class="container-fluid">
+    	<h2 class="row">Acesso aos perifericos</h2>
+		<ul class="row">
+			<li class="col-xs-12 col-sm-6 col-md-3" id='device_cam'>Captura imagem</li>
+			<li class="col-xs-12 col-sm-6 col-md-3" id='device_barcode'>C&oacute;digo de barras</li>
+			<li class="col-xs-12 col-sm-6 col-md-3" id='device_bt_paired'>Pareados</li>
+			<li class="col-xs-12 col-sm-6 col-md-3" id='device_geolocation'>Geo Posi&ccedil;&atilde;o</li>
+			<li class="col-xs-12 col-sm-6 col-md-3" id='device_orientation_lock'>Libera Orienta&ccedil;&atilde;o</li>
+			<li class="col-xs-12 col-sm-6 col-md-3" id='device_orientation_unlock'>Trava Orienta&ccedil;&atilde;o</li>
+			<li class="col-xs-12 col-sm-6 col-md-3" id='device_notify'>Notifica&ccedil;&atilde;o</li>
+			<li class="col-xs-12 col-sm-6 col-md-3" id='device_vibrate'>Vibra&ccedil;&atilde;o</li>
     </ul>
 
-    <h2>Testa os perifericos</h2>
-    <ul>
-        <li id='test_bluetooth'>Testa BlueTooth</li>
-        <li id='test_nfc'>Testa NFC</li>
-        <li id='test_wifi'>Testa WIFI</li>
-        <li id='test_gps'>Testa GPS</li>
-        <li id='test_wifi_conn'>Conectado WIFI</li>
-        <li id='test_3g_conn'>Conectado 3G</li>
-    </ul>
+		<h2 class="row">Testa os perifericos</h2>
+		<ul class="row">
+			<li class="col-xs-12 col-sm-6 col-md-3" id='test_bluetooth'>Testa BlueTooth</li>
+			<li class="col-xs-12 col-sm-6 col-md-3" id='test_nfc'>Testa NFC</li>
+			<li class="col-xs-12 col-sm-6 col-md-3" id='test_wifi'>Testa WIFI</li>
+			<li class="col-xs-12 col-sm-6 col-md-3" id='test_gps'>Testa GPS</li>
+			<li class="col-xs-12 col-sm-6 col-md-3" id='test_wifi_conn'>Conectado WIFI</li>
+			<li class="col-xs-12 col-sm-6 col-md-3" id='test_3g_conn'>Conectado 3G</li>
+		</ul>
 
-    <h2>Abre as configura&ccedil;&otilde;es</h2>
-    <ul>
-        <li id='config_bluetooth'>Abre BlueTooth</li>
-        <li id='config_nfc'>Abre NFC</li>
-        <li id='config_wifi'>Abre WIFI</li>
-        <li id='config_gps'>Abre GPS</li>
-    </ul>
+		<h2 class="row">Abre as configura&ccedil;&otilde;es</h2>
+		<ul class="row">
+			<li class="col-xs-12 col-sm-6 col-md-3" id='config_bluetooth'>Abre BlueTooth</li>
+			<li class="col-xs-12 col-sm-6 col-md-3" id='config_nfc'>Abre NFC</li>
+			<li class="col-xs-12 col-sm-6 col-md-3" id='config_wifi'>Abre WIFI</li>
+			<li class="col-xs-12 col-sm-6 col-md-3" id='config_gps'>Abre GPS</li>
+		</ul>
 
-    <h2>Acesso ao SQLite</h2>
-    <ul>
-        <li id='db_create'>Cria Tabela</li>
-        <li id='db_delete'>Apaga Tabela</li>
-        <li id='db_query'>Recupera dados</li>
-        <li id='db_tables'>Lista Tabelas</li>
-        <li id='db_rollback'>Processo c/ Rollback</li>
-        <li id='db_commit'>Processo c/ Commit</li>
-    </ul>
+		<h2 class="row">Acesso ao SQLite</h2>
+		<ul class="row">
+			<li class="col-xs-12 col-sm-6 col-md-3" id='db_create'>Cria Tabela</li>
+			<li class="col-xs-12 col-sm-6 col-md-3" id='db_delete'>Apaga Tabela</li>
+			<li class="col-xs-12 col-sm-6 col-md-3" id='db_query'>Recupera dados</li>
+			<li class="col-xs-12 col-sm-6 col-md-3" id='db_tables'>Lista Tabelas</li>
+			<li class="col-xs-12 col-sm-6 col-md-3" id='db_rollback'>Processo c/ Rollback</li>
+			<li class="col-xs-12 col-sm-6 col-md-3" id='db_commit'>Processo c/ Commit</li>
+		</ul>
 
-    <h2>Miscel&acirc;nea</h2>
-    <ul>       
-        <li id='misc_advpl'>runAdvpl</li>
-        <li id='misc_message'>Troca de mensagens</li>
-		<li id='misc_ajax'>Testar Ajax</li>
-        <li id='misc_version'>Vers&atilde;o da Lib JS</li>
-    </ul>
+		<h2 class="row">Miscel&acirc;nea</h2>
+		<ul class="row">       
+			<li class="col-xs-12 col-sm-6 col-md-3" id='misc_advpl'>runAdvpl</li>
+			<li class="col-xs-12 col-sm-6 col-md-3" id='misc_message'>Troca de mensagens</li>
+			<li class="col-xs-12 col-sm-6 col-md-3" id='misc_ajax'>Testar Ajax</li>
+			<li class="col-xs-12 col-sm-6 col-md-3" id='misc_version'>Vers&atilde;o da Lib JS</li>
+		</ul>
+	</div>
 
 	<!-- build:js scripts/vendor.js -->
 	<!-- bower:js -->
