Botão para getTempPath

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -114,6 +114,7 @@
 				<button type="button" class="totvs-btn totvs-btn-primary col-xs-12 col-sm-6 col-md-3" id='misc_message'>Troca de mensagens</button>
 				<button type="button" class="totvs-btn totvs-btn-primary col-xs-12 col-sm-6 col-md-3" id='misc_ajax'>Testar Ajax</button>
 				<button type="button" class="totvs-btn totvs-btn-primary col-xs-12 col-sm-6 col-md-3" id='misc_version'>Vers&atilde;o da Lib JS</button>
+				<button type="button" class="totvs-btn totvs-btn-primary col-xs-12 col-sm-6 col-md-3" id='misc_temp'>Diret&oacute;rio Tempor&aacute;rio</button>
 			</div>
 		</div>
 		<div id='content-log' class="container-fluid" style="display: none;">
